# STONES_AND_RIVER_BOT

./: grade_submissions.py  simple_test.sh  student_agent.py  test_bot.sh
c++_sample_files/: CMakeLists.txt  agent.py  baseline_agent_cpp.py  compile.sh  gameEngine.py  run_test.py  student_agent.cpp  student_agent.h  student_agent_cpp.py  student_agent_improved.cpp  student_agent_improved.h
client_server/: agent.py  agent_anjalee.py  gameEngine.py  report.txt  student_agent.cpp  student_agent.py
client_server/2023CS50205_2023CS10383/: student_agent.py
